# GLVoxel

./: .gitignore  .gitmodules  CMakeLists.txt  GL_notes.txt  LOG.txt  TODO.txt  bobaworld_scratchpad  c++ concurrency notes  cmakeVoxel.bat  premake5.lua
Libraries/: CMakeLists.txt  glad.lua  glfw.lua  glm.lua  imgui.lua
Source/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Collider.cpp  Collider.h  Common.h  GX.cpp  GX.h  Input.cpp  Input.h  MemPooler.cpp  MemPooler.h  Octree.cpp  Octree.h  Physics.h  Player.cpp  Player.h  RenderSettings.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  ThreadPool.h  VoxelScene.cpp  VoxelScene.h  Window.cpp  World.cpp  World.h  main.cpp
Source/Shaders/: DebugWireframe.fs.glsl  DebugWireframe.vs.glsl  skybox.vs.glsl  terrain.fs.glsl  terrain.vs.glsl  test1.fs.glsl  test1.vs.glsl
